chore: Add eslint configuration and update package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-	"dependencies": {
-		"chrome-types": "^0.1.287"
-	}
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "chrome-types": "^0.1.287"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.20.0",
+    "eslint": "^9.4.0"
+  }
 }
