--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Node modules directory
 node_modules/
+
 # Build directories
 dist/
 build/
 
 # Local environment settings
-.env
 .env.local
 .env.*.local
 
@@ -13,6 +13,7 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # OS-specific files
 .DS_Store
@@ -20,3 +21,12 @@ Thumbs.db
 
 # Chrome extension specific files
 *.pem
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
