chore: Add lint-staged as a devDependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.20.0",
     "eslint": "^9.4.0",
+    "lint-staged": "^15.2.5",
     "simple-git-hooks": "^2.11.1"
   },
   "simple-git-hooks": {
