chore: Update package.json with new extension name and description

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vitesse-webext",
-  "displayName": "Vitesse WebExt",
-  "version": "0.0.1",
+  "name": "source-taster",
+  "displayName": "The Source Taster",
+  "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@8.15.4",
-  "description": "[description]",
+  "packageManager": "pnpm@9.3.0",
+  "description": "The Source Taster is a browser extension that helps users, especially students and researchers, quickly and efficiently verify the validity and existence of sources cited in academic papers.",
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
     "dev-firefox": "npm run clear && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:*",
