chore: Add editorconfig.editorconfig extension to VSCode extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "antfu.iconify",
     "antfu.unocss",
     "dbaeumer.vscode-eslint",
-    "csstools.postcss"
+    "csstools.postcss",
+    "editorconfig.editorconfig"
   ]
 }
