--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.3.1",
+    "vite-plugin-vuetify": "^2.0.3",
     "vitest": "^1.6.0",
     "vue": "^3.4.29",
     "vue-demi": "^0.14.8",
+    "vuetify": "^3.6.9",
     "web-ext": "^8.1.0",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.12.0"
