--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vue/compiler-sfc": "^3.4.31",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^10.11.0",
+    "@vueuse/shared": "^10.11.0",
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
@@ -66,7 +67,7 @@
     "vitest": "^2.0.2",
     "vue": "^3.4.31",
     "vue-demi": "^0.14.8",
-    "vuetify": "^3.6.12",
+    "vuetify": "3.6.13-3.7.0-beta.0.0",
     "web-ext": "^8.2.0",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.12.0"
