--- a/package.json
+++ b/package.json
@@ -31,43 +31,43 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.1",
+    "@antfu/eslint-config": "2.22.0-beta.3",
     "@ffflorian/jszip-cli": "^3.6.4",
-    "@iconify/json": "^2.2.221",
+    "@iconify/json": "^2.2.225",
     "@jamesgopsill/crossref-client": "^1.1.0",
-    "@playwright/test": "^1.44.1",
+    "@playwright/test": "^1.45.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.10",
     "@types/webextension-polyfill": "^0.10.7",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@unocss/reset": "^0.61.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@unocss/reset": "^0.61.3",
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/compiler-sfc": "^3.4.30",
+    "@vue/compiler-sfc": "^3.4.31",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^10.11.0",
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "eslint": "^9.5.0",
+    "eslint": "^9.6.0",
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
     "jsdom": "^24.1.0",
     "kolorist": "^1.8.0",
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.7",
+    "rimraf": "^5.0.8",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.5.2",
-    "unocss": "^0.61.0",
+    "typescript": "^5.5.3",
+    "unocss": "^0.61.3",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-icons": "^0.19.0",
-    "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.3.1",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.3",
     "vitest": "^1.6.0",
-    "vue": "^3.4.30",
+    "vue": "^3.4.31",
     "vue-demi": "^0.14.8",
-    "vuetify": "^3.6.10",
+    "vuetify": "^3.6.11",
     "web-ext": "^8.2.0",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.12.0"
