--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
   "devDependencies": {
     "@antfu/eslint-config": "2.22.2",
     "@ffflorian/jszip-cli": "^3.6.4",
-    "@iconify/json": "^2.2.227",
     "@jamesgopsill/crossref-client": "^1.1.0",
+    "@mdi/font": "^7.4.47",
     "@playwright/test": "^1.45.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.10",
     "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@unocss/reset": "^0.61.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/compiler-sfc": "^3.4.31",
     "@vue/test-utils": "^2.4.6",
@@ -56,11 +55,11 @@
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "roboto-fontface": "^0.10.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.5.3",
-    "unocss": "^0.61.3",
     "unplugin-auto-import": "^0.18.0",
-    "unplugin-icons": "^0.19.0",
+    "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.3",
