chore: Update deps

--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.22.2",
+    "@antfu/eslint-config": "2.23.0",
     "@ffflorian/jszip-cli": "^3.6.4",
     "@jamesgopsill/crossref-client": "^1.1.0",
     "@mdi/font": "^7.4.47",
-    "@playwright/test": "^1.45.1",
+    "@playwright/test": "^1.45.2",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.11",
     "@types/webextension-polyfill": "^0.10.7",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/compiler-sfc": "^3.4.31",
+    "@vue/compiler-sfc": "^3.4.32",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^10.11.0",
     "@vueuse/shared": "^10.11.0",
@@ -61,13 +61,13 @@
     "typescript": "^5.5.3",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-fonts": "^1.1.1",
-    "unplugin-vue-components": "^0.27.2",
-    "vite": "^5.3.3",
+    "unplugin-vue-components": "^0.27.3",
+    "vite": "^5.3.4",
     "vite-plugin-vuetify": "^2.0.3",
-    "vitest": "^2.0.2",
-    "vue": "^3.4.31",
+    "vitest": "^2.0.3",
+    "vue": "^3.4.32",
     "vue-demi": "^0.14.8",
-    "vuetify": "3.6.13-3.7.0-beta.0.0",
+    "vuetify": "3.6.13",
     "web-ext": "^8.2.0",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.12.0"
