feat: Added logos #9

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "packageManager": "pnpm@9.5.0",
   "description": "The Source Taster is a browser extension that helps users, especially students and researchers, quickly and efficiently verify the validity and existence of sources cited in academic papers.",
   "scripts": {
+    "copy-assets": "cp -r src/assets extension/dist/",
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
     "dev-firefox": "npm run clear && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:*",
     "dev:prepare": "esno scripts/prepare.ts",
     "dev:background": "npm run build:background -- --mode development",
     "dev:web": "vite",
     "dev:js": "npm run build:js -- --mode development",
-    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js",
+    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:background build:js copy-assets",
     "build:prepare": "esno scripts/prepare.ts",
     "build:background": "vite build --config vite.config.background.mts",
     "build:web": "vite build",
