--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
     "jsdom": "^25.0.0",
+    "jspdf": "^2.5.2",
     "kolorist": "^1.8.0",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
