--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vitest": "^2.1.1",
     "vue": "^3.5.10",
     "vue-demi": "^0.14.10",
+    "vue-i18n": "^10.0.4",
     "vuetify": "3.7.2",
     "web-ext": "^8.3.0",
     "webext-bridge": "^6.0.1",
