--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "kolorist": "^1.8.0",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
+    "pinia": "^2.2.4",
     "rimraf": "^6.0.1",
     "roboto-fontface": "^0.10.0",
     "simple-git-hooks": "^2.11.1",
