--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "roboto-fontface": "^0.10.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.6.2",
+    "unpdf": "^0.12.1",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.4",
