--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "esno": "^4.7.0",
     "fs-extra": "^11.2.0",
     "jsdom": "^25.0.1",
-    "jspdf": "^2.5.2",
     "kolorist": "^1.8.0",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
+    "pdf-lib": "^1.17.1",
     "pinia": "^2.2.4",
     "rimraf": "^6.0.1",
     "roboto-fontface": "^0.10.0",
