--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "test:e2e": "playwright test",
     "postinstall": "simple-git-hooks",
     "typecheck": "tsc --noEmit",
-    "release": "bumpp"
+    "release": "bumpp",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
     "@antfu/eslint-config": "3.7.3",
@@ -68,6 +71,7 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.8",
     "vite-plugin-vuetify": "^2.0.4",
+    "vitepress": "^1.5.0",
     "vitest": "^2.1.1",
     "vue": "^3.5.10",
     "vue-demi": "^0.14.10",
