--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ffflorian/jszip-cli": "^3.8.2",
     "@jamesgopsill/crossref-client": "^1.1.0",
     "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@pdf-lib/fontkit": "^1.1.1",
     "@playwright/test": "^1.49.1",
     "@types/fs-extra": "^11.0.4",
