--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "vue": "^3.5.13",
     "vue-demi": "^0.14.10",
     "vue-i18n": "^11.0.1",
+    "vue-router": "^4.5.0",
     "vuetify": "3.7.7",
     "web-ext": "^8.3.0",
     "webext-bridge": "^6.0.1",
