--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "unplugin-auto-import": "^19.0.0",
     "unplugin-fonts": "^1.3.1",
     "unplugin-vue-components": "^28.0.0",
+    "unplugin-vue-router": "^0.11.2",
     "vite": "^6.1.0",
     "vite-plugin-vuetify": "^2.1.0",
     "vitepress": "^1.6.3",
