--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Source Taster is a browser extension that helps users quickly verify the validity and existence of sources cited in academic papers.",
   "scripts": {
     "dev": "npm run clear && cross-env NODE_ENV=development run-p dev:*",
+    "dev:server": "tsx watch --env-file=src/.env src/server.ts",
     "dev-firefox": "npm run clear && cross-env NODE_ENV=development EXTENSION=firefox run-p dev:*",
     "dev:prepare": "esno scripts/prepare.ts",
     "dev:background": "npm run build:background -- --mode development",
@@ -36,6 +37,7 @@
     "@ffflorian/jszip-cli": "^3.8.2",
     "@fontsource/roboto": "^5.1.1",
     "@google/generative-ai": "^0.21.0",
+    "@hono/node-server": "^1.13.8",
     "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@jamesgopsill/crossref-client": "^1.1.0",
     "@mdi/js": "^7.4.47",
@@ -56,6 +58,7 @@
     "eslint": "^9.20.1",
     "esno": "^4.8.0",
     "fs-extra": "^11.3.0",
+    "hono": "^4.7.1",
     "jsdom": "^26.0.0",
     "kolorist": "^1.8.0",
     "lint-staged": "^15.4.3",
@@ -64,6 +67,7 @@
     "pinia": "^2.3.1",
     "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "unpdf": "^0.12.1",
     "unplugin-auto-import": "^19.0.0",
