feat(backend): add build script and TypeScript support, update dev script

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,11 @@
       "node"
     ],
     "strict": true,
+    "outDir": "./dist",
     "verbatimModuleSyntax": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
