--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc",
+    "start": "node --env-file=.env dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
