chore: update deps

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -24,7 +24,8 @@
     "start:chromium": "web-ext run --source-dir ./extension --target=chromium",
     "start:firefox": "web-ext run --source-dir ./extension --target=firefox-desktop",
     "clear": "rimraf --glob extension/dist extension/manifest.json extension.*",
-    "lint": "eslint --cache .",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "typecheck": "tsc --noEmit",
     "release": "bumpp"
   },
@@ -37,13 +38,14 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@source-taster/eslint-config": "workspace:^",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.13.14",
     "@types/webextension-polyfill": "^0.12.3",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/core": "^12.8.2",
+    "@vueuse/integrations": "^13.0.0",
     "@vueuse/shared": "^12.8.2",
     "bumpp": "^9.11.1",
     "chokidar": "^4.0.3",
@@ -52,6 +54,7 @@
     "eslint": "^9.23.0",
     "esno": "^4.8.0",
     "fs-extra": "^11.3.0",
+    "fuse.js": "^7.1.0",
     "jsdom": "^26.0.0",
     "kolorist": "^1.8.0",
     "npm-run-all": "^4.1.5",
