feat: add lint-staged configuration for automatic ESLint fixing on pre-commit

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,5 +17,8 @@
     "@source-taster/eslint-config": "workspace:^",
     "eslint": "^9.23.0",
     "vitepress": "^1.6.3"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
