--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,5 +19,8 @@
     "eslint": "^9.23.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
