--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -78,5 +78,8 @@
     "web-ext": "^8.5.0",
     "webext-bridge": "^6.0.1",
     "webextension-polyfill": "^0.12.0"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
