--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "devDependencies": {
     "eslint": "^9.23.0",
+    "lint-staged": "^15.5.0",
     "simple-git-hooks": "^2.12.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
