--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,9 @@
-name: CI
+name: Lint
 
 on:
-  push:
-    branches: [main, development]
   pull_request:
-    branches: [main]
+    branches: 
+      - main
 
   workflow_dispatch:
 
@@ -13,16 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
           version: latest
-      - uses: actions/setup-node@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: pnpm
 
       - name: Install
-        run: pnpm install
+        run: pnpm i
 
       - name: Lint
-        run: pnpm run lint
+        run: pnpm lint
