fix(vscode): i18n-ally configuration for localization support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,13 @@
     "scss",
     "pcss",
     "postcss"
+  ],
+  "i18n-ally.localesPaths": [
+    "apps/extension/src/locales"
+  ],
+  "i18n-ally.sortKeys": true,
+  "i18n-ally.keepFulfilled": true,
+  "i18n-ally.enabledFrameworks": [
+    "vue"
   ]
 }
