fix: update pre-commit hook to use lint-staged

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "simple-git-hooks": "^2.12.1"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint"
+    "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
