--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,7 @@
     "hono": "^4.7.6"
   },
   "devDependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/genai": "^0.7.0",
     "@source-taster/eslint-config": "workspace:^",
     "@types/node": "^20.17.30",
     "eslint": "^9.24.0",
