--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -53,11 +53,13 @@
     "crx": "^5.0.1",
     "eslint": "^9.25.0",
     "esno": "^4.8.0",
+    "fetch-retry": "^6.0.0",
     "fs-extra": "^11.3.0",
     "fuse.js": "^7.1.0",
     "jsdom": "^26.1.0",
     "kolorist": "^1.8.0",
     "npm-run-all": "^4.1.5",
+    "p-queue": "^8.1.0",
     "pdf-lib": "^1.17.1",
     "pinia": "^2.3.1",
     "rimraf": "^6.0.1",
