--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -37,6 +37,7 @@
     "@mdi/js": "^7.4.47",
     "@pdf-lib/fontkit": "^1.1.1",
     "@source-taster/eslint-config": "workspace:^",
+    "@source-taster/types": "workspace:^",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.15.32",
     "@types/webextension-polyfill": "^0.12.3",
