--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,3 +9,8 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Server Port
 PORT=8000
+
+# OpenAlex API Configuration
+# Your email for better API performance (optional but recommended)
+# OpenAlex: "For best performance, add your email to all API requests"
+OPENALEX_EMAIL=your-email@example.com
