refactor: update .env.example to remove OpenAlex email configuration and clarify User-Agent usage

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,7 +10,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Server Port
 PORT=8000
 
-# OpenAlex API Configuration
-# Your email for better API performance (optional but recommended)
-# OpenAlex: "For best performance, add your email to all API requests"
-OPENALEX_EMAIL=your-email@example.com
+# User-Agent Configuration
+# Used for OpenAlex and Crossref API requests
+# Should include your app name and contact info
+USER_AGENT=Source-Taster/1.0 (https://github.com/your-repo; mailto:your-email@example.com)
