--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,5 +7,8 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Google Gemini API Key (https://makersuite.google.com/app/apikey)
 GEMINI_API_KEY=your_gemini_api_key_here
 
+# Semantic Scholar API Key (https://www.semanticscholar.org/product/api#api-key-form)
+SEMANTIC_SCHOLAR_API_KEY=your_semantic_scholar_api_key_here
+
 # Server Port
 PORT=8000
