--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,5 +10,9 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Semantic Scholar API Key (https://www.semanticscholar.org/product/api#api-key-form)
 SEMANTIC_SCHOLAR_API_KEY=your_semantic_scholar_api_key_here
 
+# Crossref API Configuration
+# Email for Crossref "polite pool" - provides better API performance
+CROSSREF_MAILTO=your-email@domain.com
+
 # Server Port
 PORT=8000
