feat: add OpenAlex API configuration and enhance search functionality with polite pool support

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -14,5 +14,9 @@ SEMANTIC_SCHOLAR_API_KEY=your_semantic_scholar_api_key_here
 # Email for Crossref "polite pool" - provides better API performance
 CROSSREF_MAILTO=your-email@domain.com
 
+# OpenAlex API Configuration
+# Email for OpenAlex "polite pool" - provides better API performance and rate limits
+OPENALEX_MAILTO=your-email@domain.com
+
 # Server Port
 PORT=8000
