feat: add Europe PMC API configuration and enhance EuropePmcService with email support for better API performance

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,5 +18,9 @@ CROSSREF_MAILTO=your-email@domain.com
 # Email for OpenAlex "polite pool" - provides better API performance and rate limits
 OPENALEX_MAILTO=your-email@domain.com
 
+# Europe PMC API Configuration
+# Email for Europe PMC - provides better API performance and support
+EUROPEPMC_EMAIL=your-email@domain.com
+
 # Server Port
 PORT=8000
