feat: add cheerio and its type definitions to dependencies

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
+    "cheerio": "^1.1.0",
     "hono": "^4.8.3"
   },
   "devDependencies": {
     "@google/genai": "^1.7.0",
     "@source-taster/eslint-config": "workspace:^",
     "@source-taster/types": "workspace:^",
+    "@types/cheerio": "^1.0.0",
     "@types/node": "^20.19.2",
     "eslint": "^9.30.0",
     "openai": "^4.104.0",
