--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -61,6 +61,7 @@
     "rimraf": "^6.0.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
+    "unpdf": "^1.0.6",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-fonts": "^1.3.1",
     "unplugin-vue-components": "^28.8.0",
