feat: enhance model selection logic to prioritize environment variable for OpenAI model

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,6 +4,10 @@
 # OpenAI API Key (https://platform.openai.com/api-keys)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# OpenAI Model Configuration
+# Default: gpt-4o (if not specified)
+OPENAI_MODEL=gpt-4o
+
 # Semantic Scholar API Key (https://www.semanticscholar.org/product/api#api-key-form)
 SEMANTIC_SCHOLAR_API_KEY=your_semantic_scholar_api_key_here
 
