--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hono/node-server": "^1.14.4",
     "cheerio": "^1.1.0",
-    "hono": "^4.8.3"
+    "hono": "^4.8.3",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@source-taster/eslint-config": "workspace:^",
