feat: implement custom CORS middleware for enhanced security and environment handling

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,6 +8,21 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Default: gpt-4o (if not specified)
 OPENAI_MODEL=gpt-4o
 
+# Environment
+NODE_ENV=development
+
+# Extension Security / CORS Configuration
+# In DEVELOPMENT: All origins are allowed (browser localhost, API tools like Yaak/Postman, extensions)
+# In PRODUCTION: Only specific extension IDs are allowed
+
+# Comma-separated list of allowed extension IDs for production (without chrome-extension:// prefix)
+# Example: ALLOWED_EXTENSION_IDS=abcdefghijklmnop,qrstuvwxyzabcdef
+# How to find your extension ID:
+# 1. Go to chrome://extensions/
+# 2. Enable "Developer mode" (top right)
+# 3. Find your extension and copy the ID
+ALLOWED_EXTENSION_IDS=
+
 # Semantic Scholar API Key (https://www.semanticscholar.org/product/api#api-key-form)
 SEMANTIC_SCHOLAR_API_KEY=your_semantic_scholar_api_key_here
 
