--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,6 +16,8 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.76"
+
   }
 }
