refactor: add "type": "module" to package.json for module support

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@source-taster/types",
+  "type": "module",
   "version": "1.0.0",
   "description": "Shared TypeScript types for Source Taster",
   "exports": {
