--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,8 +19,12 @@
     "@source-taster/eslint-config": "workspace:^",
     "@source-taster/types": "workspace:^",
     "@types/cheerio": "^1.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.19.9",
     "eslint": "^9.31.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "openai": "^4.104.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
