--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.17.0",
+    "@hono/zod-validator": "^0.7.2",
     "cheerio": "^1.1.0",
     "hono": "^4.8.5",
     "zod": "^3.25.76",
