feat: enhance AI provider support with multiple configurations and fallback options

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,12 +1,25 @@
-# API Keys for AI Services
-# Copy this file to .env and add your real API keys
+# AI Provider Configuration (Development Only)
+# In production, users must provide their own API key via the extension settings
 
-# OpenAI API Key (https://platform.openai.com/api-keys)
+# AI Provider (openai, anthropic, google)
+AI_PROVIDER=openai
+
+# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
-# OpenAI Model Configuration
-# Default: gpt-4o (if not specified)
-OPENAI_MODEL=gpt-4o
+# Alternative: Anthropic/Claude (requires AI_PROVIDER=anthropic)
+# OPENAI_API_KEY=sk-ant-your-anthropic-key-here
+# OPENAI_MODEL=claude-4-sonnet
+
+# Alternative: Google Gemini (requires AI_PROVIDER=google)  
+# OPENAI_API_KEY=your_google_ai_studio_key_here
+# OPENAI_MODEL=gemini-2.5-flash
+
+# Note: 
+# - These environment variables are only used as fallback during development
+# - The extension will use user-provided API keys in production to avoid server costs
+# - We use OPENAI_API_KEY for all providers since they're OpenAI-compatible
 
 # Environment
 NODE_ENV=development
