feat: implement API key encryption and decryption middleware for secure transmission

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,9 +20,11 @@
     "@source-taster/eslint-config": "workspace:^",
     "@source-taster/types": "workspace:^",
     "@types/cheerio": "^1.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.19.9",
+    "crypto-js": "^4.2.0",
     "eslint": "^9.32.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
