--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -36,6 +36,7 @@
     "@mdi/js": "^7.4.47",
     "@source-taster/eslint-config": "workspace:^",
     "@source-taster/types": "workspace:^",
+    "@types/crypto-js": "^4.2.2",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.16.5",
     "@types/webextension-polyfill": "^0.12.3",
@@ -50,6 +51,7 @@
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
+    "crypto-js": "^4.2.0",
     "eslint": "^9.32.0",
     "esno": "^4.8.0",
     "fs-extra": "^11.3.0",
