--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,8 +17,9 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
     "typescript": "^5.8.3",
     "zod": "^3.25.76"
-
   }
 }
