--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,6 @@
   "i18n-ally.enabledFrameworks": [
     "vue"
   ],
-  "i18n-ally.keystyle": "flat"
+  "i18n-ally.keystyle": "flat",
+  "typescript.tsserver.enableProjectDiagnostics": true
 }
