--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "preinstall": "simple-git-hooks"
   },
   "devDependencies": {
-    "eslint": "^9.32.0",
+    "eslint": "^9.34.0",
     "lint-staged": "^15.5.2",
-    "simple-git-hooks": "^2.13.0"
+    "simple-git-hooks": "^2.13.1",
+    "typescript": "^5.9.2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
