--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,28 +11,27 @@
   "dependencies": {
     "@hono/node-server": "^1.19.1",
     "@hono/zod-validator": "^0.7.2",
-    "@types/damerau-levenshtein": "^1.0.2",
     "cheerio": "^1.1.2",
+    "crypto-js": "^4.2.0",
     "damerau-levenshtein": "^1.0.8",
     "hono": "^4.9.6",
-    "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.24.6"
+    "lodash": "^4.17.21",
+    "normalize-url": "^8.0.2",
+    "openai": "^4.104.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@source-taster/eslint-config": "workspace:^",
     "@source-taster/types": "workspace:^",
     "@types/cheerio": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/damerau-levenshtein": "^1.0.2",
     "@types/lodash": "^4.17.20",
-    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.19.13",
-    "crypto-js": "^4.2.0",
     "eslint": "^9.34.0",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "openai": "^4.104.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod-to-json-schema": "^3.24.6"
   },
   "lint-staged": {
     "*": "eslint --fix"
