--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.2.0",
     "damerau-levenshtein": "^1.0.8",
     "hono": "^4.9.6",
+    "key-file-storage": "^2.3.3",
     "lodash": "^4.17.21",
     "normalize-url": "^8.0.2",
     "openai": "^4.104.0",
