--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -53,3 +53,13 @@ EUROPEPMC_EMAIL=your-email@domain.com
 
 # Server Port
 PORT=8000
+
+# mkdir -p .keystore
+# (chmod 700 ist auf macOS/Linux ok; auf Windows ignorierbar)
+# chmod 700 .keystore 2>/dev/null || true
+MASTER_KEY=a-very-long-and-random-master-key
+KEY_DERIVATION_SALT=a-very-long-and-random-salt
+KEYSTORE_DIR=.keystore
+
+ANYSTYLE_SERVER_URL=http://localhost:4567
+
