--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,8 +31,7 @@
     "@types/node": "^24.3.1",
     "eslint": "^9.35.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "zod-to-json-schema": "^3.24.6"
+    "typescript": "^5.9.2"
   },
   "lint-staged": {
     "*": "eslint --fix"
