feat: add sortablejs dependency and implement sortable functionality in DatabasePanel

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -29,6 +29,9 @@
     "typecheck": "tsc --noEmit",
     "release": "bumpp"
   },
+  "dependencies": {
+    "sortablejs": "^1.15.6"
+  },
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.8.6",
     "@fontsource/roboto": "^5.2.6",
