fix: update OpenAI model version to gpt-4.1 and remove unused schemas

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,7 +6,7 @@ AI_PROVIDER=openai
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4o-mini
+OPENAI_MODEL=gpt-4.1
 
 # Alternative: Anthropic/Claude (requires AI_PROVIDER=anthropic)
 # OPENAI_API_KEY=sk-ant-your-anthropic-key-here
