--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,24 +1,46 @@
-# Dockerfile
-FROM ruby:3.2-slim
+# syntax=docker/dockerfile:1.6
 
-# Systemabhängige Pakete installieren (für Nokogiri & Co.)
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    libxml2-dev \
-    libxslt1-dev \
-    curl \
- && rm -rf /var/lib/apt/lists/*
-
-# Gems installieren (inkl. CLI)
-RUN gem install anystyle anystyle-cli sinatra citeproc rackup puma nokogiri
+FROM node:20-bookworm-slim AS base
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
 
 WORKDIR /app
 
-# Serverdatei + ggf. Modell kopieren
-COPY anystyle-server.rb ./
+FROM base AS deps
+WORKDIR /app
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends ca-certificates build-essential python3 \
+  && rm -rf /var/lib/apt/lists/*
+COPY pnpm-lock.yaml pnpm-workspace.yaml package.json ./
+COPY apps/api/package.json apps/api/package.json
+COPY packages/types/package.json packages/types/package.json
+COPY packages/eslint-config/package.json packages/eslint-config/package.json
+RUN pnpm install --frozen-lockfile
 
-EXPOSE 4567
+FROM deps AS build
+WORKDIR /app
+COPY . .
+RUN pnpm --filter @source-taster/types build
+RUN pnpm --filter @source-taster/api build
 
-# Standard-CMD: Sinatra-Server starten
-CMD ["ruby", "anystyle-server.rb"]
+FROM base AS runtime
+WORKDIR /app
+ENV NODE_ENV=production
+ENV NODE_OPTIONS=--experimental-specifier-resolution=node
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/apps/api/node_modules ./apps/api/node_modules
+COPY --from=build /app/apps/api/dist/ ./apps/api/dist/
+COPY --from=build /app/apps/api/package.json ./apps/api/package.json
+COPY --from=build /app/apps/api/.env.example ./apps/api/.env.example
+COPY --from=build /app/packages/types ./packages/types
+COPY --from=build /app/pnpm-workspace.yaml ./pnpm-workspace.yaml
+COPY --from=build /app/package.json ./package.json
+RUN mkdir -p /app/.keystore
+VOLUME ["/app/.keystore"]
+
+EXPOSE 8000
+CMD ["node", "apps/api/dist/index.js"]
