--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc",
-    "start": "node --env-file=.env dist/index.js",
+    "start": "node --experimental-specifier-resolution=node --env-file=.env dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@hono/node-server": "^1.19.2",
     "@hono/zod-validator": "^0.7.2",
+    "@source-taster/types": "workspace:^",
     "cheerio": "^1.1.2",
     "crypto-js": "^4.2.0",
     "damerau-levenshtein": "^1.0.8",
@@ -23,7 +24,6 @@
   },
   "devDependencies": {
     "@source-taster/eslint-config": "workspace:^",
-    "@source-taster/types": "workspace:^",
     "@types/cheerio": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/damerau-levenshtein": "^1.0.2",
