--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,9 +14,12 @@
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@source-taster/eslint-config": "workspace:^",
     "eslint": "^9.35.0",
-    "vitepress": "^1.6.4"
+    "mermaid": "^11.11.0",
+    "vitepress": "^1.6.4",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "lint-staged": {
     "*": "eslint --fix"
